--- a/view/frontend/web/template/payment/buckaroo_magento2_creditcards.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_creditcards.html
@@ -5,8 +5,8 @@
                 <input type="radio"
                        name="payment[method]"
                        class="radio"
-                       data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"/>
-                <label class="label" data-bind="attr: {'for': getCode()}">
+                       data-bind="attr: { 'id': getCode() }, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"/>
+                <label class="label" data-bind="attr: { 'for': getCode() }">
                     <!-- ko text: getTitle() --><!-- /ko -->
                     <!-- ko if: subtext && subtext.length -->
                     <p class="bk-description" data-bind="text: subtext, style: subTextStyle"></p>
@@ -14,7 +14,7 @@
                 </label>
             </div>
             <div class="bk-img-wrap">
-                <img data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/svg/creditcards.svg') }"/>
+                <img data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/svg/creditcards.svg') }" alt="Credit Cards"/>
             </div>
         </div>
     </div>
@@ -29,8 +29,8 @@
         <form>
             <div class="payment-method-second-col payment-method-second-col-tailwind billing-address-form">
                 <div class="mb-4 field">
-                    <label id="cc-name-label" for="cc-cvc-wrapper" class="label">
-                        <span data-bind="i18n: 'Cardholder Name:'"> </span>
+                    <label id="cc-name-label" for="cc-name-wrapper" class="label">
+                        <span data-bind="i18n: 'Cardholder Name:'"></span>
                     </label>
                     <div id="cc-name-wrapper"
                          class="shadow h-12 appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
@@ -40,7 +40,7 @@
 
                 <div class="mb-4 field">
                     <label id="cc-number-label" for="cc-number-wrapper" class="label">
-                        <span data-bind="i18n: 'Card Number:'"> </span>
+                        <span data-bind="i18n: 'Card Number:'"></span>
                     </label>
                     <div id="cc-number-wrapper"
                          class="shadow h-12 appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
@@ -52,7 +52,7 @@
                     <div class="grid grid-cols-2 gap-4">
                         <div class="col-span-1">
                             <label id="cc-expiry-label" for="cc-expiry-wrapper" class="label">
-                                <span data-bind="i18n: 'Expiry Date:'"> </span>
+                                <span data-bind="i18n: 'Expiry Date:'"></span>
                             </label>
                             <div id="cc-expiry-wrapper"
                                  class="shadow h-12 appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
@@ -61,7 +61,7 @@
                         </div>
                         <div class="col-span-1">
                             <label id="cc-cvc-label" for="cc-cvc-wrapper" class="label">
-                                <span data-bind="i18n: 'CVC:'"> </span>
+                                <span data-bind="i18n: 'CVC:'"></span>
                             </label>
                             <div id="cc-cvc-wrapper"
                                  class="shadow h-12 appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
@@ -72,17 +72,12 @@
                 </div>
 
                 <div class="field">
-                    <span
-                        data-bind="i18n: 'Please make sure all fields are filled in correctly before proceeding.'"></span>
-                    <a class="text-gray-500 hover:text-gray-800 float-right ml-2" href="#"
-                       data-bind="click: resetForm, i18n: 'Clear'"></a>
+                    <span data-bind="i18n: 'Please make sure all fields are filled in correctly before proceeding.'"></span>
+                    <a class="text-gray-500 hover:text-gray-800 float-right ml-2" href="#" data-bind="click: resetForm, i18n: 'Clear'"></a>
                 </div>
 
-
-                <div class="field oauth-token-error mage-error"
-                     data-bind="text: oauthTokenError, visible: oauthTokenError"></div>
-                <div class="field payment-error mage-error"
-                     data-bind="text: paymentError, visible: paymentError"></div>
+                <div class="field oauth-token-error mage-error" data-bind="text: oauthTokenError, visible: oauthTokenError"></div>
+                <div class="field payment-error mage-error" data-bind="text: paymentError, visible: paymentError"></div>
             </div>
             <div class="actions-toolbar creditcards">
                 <div class="primary">
