refactor payment: implement token expiration handling and unify hosted fields reset logic

--- a/view/frontend/web/template/payment/buckaroo_magento2_creditcards.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_creditcards.html
@@ -73,7 +73,7 @@
 
                 <div class="field">
                     <span data-bind="i18n: 'Please make sure all fields are filled in correctly before proceeding.'"></span>
-                    <a class="text-gray-500 hover:text-gray-800 float-right ml-2" href="#" data-bind="click: resetForm, i18n: 'Clear'"></a>
+                    <a class="text-gray-500 hover:text-gray-800 float-right ml-2" href="#" data-bind="click: resetHostedFields, i18n: 'Clear'"></a>
                 </div>
 
                 <div class="field oauth-token-error mage-error" data-bind="text: oauthTokenError, visible: oauthTokenError"></div>
