Add Apple Pay configuration and improve shipping method handling

--- a/view/frontend/templates/catalog/product/view/applepay.phtml
+++ b/view/frontend/templates/catalog/product/view/applepay.phtml
@@ -17,34 +17,36 @@
  * @copyright Copyright (c) Buckaroo B.V.
  * @license   https://tldrlegal.com/license/mit-license
  */
-?>
-<?php if ($block->canShowProductButton()): ?>
-<div id="apple-pay-catalog-product-view-component" data-bind="scope:'applepayproductcomponent'">
-    <!-- ko template: getTemplate() --><!-- /ko -->
 
-    <script>
-        if ('undefined' === typeof window.checkoutConfig) {
-            window.checkoutConfig = <?= /* @noEscape */ ($block->getApplepayConfig()); ?>;
-            window.isCustomerLoggedIn = window.checkoutConfig.isCustomerLoggedIn;
-            if ('undefined' === typeof window.checkoutConfig.totalsData) {
-                window.checkoutConfig.totalsData = {};
+/** @var string $block */
+
+if ($block->canShowButton('Product')): ?>
+    <div id="apple-pay-catalog-product-view-component" data-bind="scope:'buckarooApplepayProduct'">
+        <!-- ko template: getTemplate() --><!-- /ko -->
+
+        <script>
+            if ('undefined' === typeof window.checkoutConfig) {
+                window.checkoutConfig = <?= /* @noEscape */ ($block->getApplepayConfig()); ?>;
+                window.isCustomerLoggedIn = window.checkoutConfig.isCustomerLoggedIn;
+                if ('undefined' === typeof window.checkoutConfig.totalsData) {
+                    window.checkoutConfig.totalsData = {};
+                }
             }
-        }
-    </script>
+        </script>
 
-    <script type="text/x-magento-init">
-        {
-            "#apple-pay-catalog-product-view-component": {
-                "Magento_Ui/js/core/app": {
-                    "components": {
-                        "applepayproductcomponent": {
-                            "component":"buckaroo/applepay/catalog-product-view",
-                            "template":"Buckaroo_Magento2/catalog/product/view/applepay"
+        <script type="text/x-magento-init">
+            {
+                "#apple-pay-catalog-product-view-component": {
+                    "Magento_Ui/js/core/app": {
+                        "components": {
+                            "buckarooApplepayProduct": {
+                                "component": "buckaroo/applepay/catalog-product-view",
+                                "template": "Buckaroo_Magento2/catalog/product/view/applepay"
+                            }
                         }
                     }
                 }
             }
-        }
-    </script>
-</div>
+        </script>
+    </div>
 <?php endif; ?>
