--- a/view/frontend/templates/checkout/cart/applepay.phtml
+++ b/view/frontend/templates/checkout/cart/applepay.phtml
@@ -1,41 +1,50 @@
 <?php
-/**
- * NOTICE OF LICENSE
- *
- * This source file is subject to the MIT License
- * It is available through the world-wide-web at this URL:
- * https://tldrlegal.com/license/mit-license
- * If you are unable to obtain it through the world-wide-web, please send an email
- * to support@buckaroo.nl so we can send you a copy immediately.
- *
- * DISCLAIMER
- *
- * Do not edit or add to this file if you wish to upgrade this module to newer
- * versions in the future. If you wish to customize this module for your
- * needs please contact support@buckaroo.nl for more information.
- *
- * @copyright Copyright (c) Buckaroo B.V.
- * @license   https://tldrlegal.com/license/mit-license
- */
-?>
-<?php if ($block->canShowButton()): ?>
-<div class="box-tocart">
-    <div class="fieldset">
-        <div class="actions">
-            <div id="apple-pay-wrapper" data-bind="afterRender: showPayButton"></div>
-        </div>
-    </div>
-</div>
+    /**
+     * NOTICE OF LICENSE
+     *
+     * This source file is subject to the MIT License
+     * It is available through the world-wide-web at this URL:
+     * https://tldrlegal.com/license/mit-license
+     * If you are unable to obtain it through the world-wide-web, please send an email
+     * to support@buckaroo.nl so we can send you a copy immediately.
+     *
+     * DISCLAIMER
+     *
+     * Do not edit or add to this file if you wish to upgrade this module to newer
+     * versions in the future. If you wish to customize this module for your
+     * needs please contact support@buckaroo.nl for more information.
+     *
+     * @copyright Copyright (c) Buckaroo B.V.
+     * @license   https://tldrlegal.com/license/mit-license
+     */
 
-<script>
-    if ('undefined' === typeof window.checkoutConfig) {
-        window.checkoutConfig = <?= /* @noEscape */ $block->getCheckoutConfig(); ?>;
-        window.isCustomerLoggedIn = window.checkoutConfig.isCustomerLoggedIn;
-    }
-    showPayButton = function() {
-        require(['jquery', 'buckaroo/applepay/checkout-cart'], function (jQuery, applepayPay) {
-            applepayPay.showPayButton();
-        });
-    }
-</script>
+    /** @var string $block */
+?>
+<?php if ($block->canShowButton('Cart')): ?>
+    <div id="apple-pay-catalog-cart-view-component" data-bind="scope:'buckarooApplepayCart'">
+        <!-- ko template: getTemplate() --><!-- /ko -->
+
+        <script>
+            if ('undefined' === typeof window.checkoutConfig) {
+                window.checkoutConfig = <?= /* @noEscape */ $block->getCheckoutConfig(); ?>;
+                window.isCustomerLoggedIn = window.checkoutConfig.isCustomerLoggedIn;
+            }
+        </script>
+
+        <script type="text/x-magento-init">
+            {
+                "#apple-pay-catalog-cart-view-component": {
+                    "Magento_Ui/js/core/app": {
+                        "components": {
+                            "buckarooApplepayCart": {
+                                "component": "buckaroo/applepay/catalog-cart-view",
+                                "template":"Buckaroo_Magento2/checkout/cart/applepay"
+                            }
+                        }
+                    }
+                }
+            }
+        </script>
+    </div>
+
 <?php endif; ?>
