Add Buckaroo Apple Pay integration to product and cart views

--- a/view/frontend/web/css/styles.css
+++ b/view/frontend/web/css/styles.css
@@ -12,6 +12,10 @@
     align-items: center;
 }
 
+.buckaroo-box-to-cart{
+    text-align: center;
+}
+
 .bk-mode-and-img {
     display: flex;
     align-items: stretch;
