--- a/view/frontend/web/template/payment/buckaroo_magento2_knaken.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_knaken.html
@@ -14,7 +14,7 @@
                 </label>
             </div>
             <div class="bk-img-wrap">
-                <img data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/svg/'+getCode().replace('buckaroo_magento2_','')+'.svg') }" />
+                <img data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/svg/gosettle.svg') }" />
             </div>
         </div>
     </div>
