refactor: remove issuer selection logic from iDEAL payment method and related configurations

--- a/view/frontend/web/template/payment/buckaroo_magento2_ideal.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_ideal.html
@@ -30,45 +30,6 @@
             <!--/ko-->
         </div>
 
-        <!-- ko if: showIssuers -->
-        <div class="payment-method-second-col billing-address-form" >
-            <div class="fieldset payment">
-                <div class="field required" >
-                    <legend class="label" data-bind="i18n: 'Select a bank:'"></legend>
-                    <div class="control">
-
-                        <!-- ko if: selectionType == '1' -->
-                            <!-- ko foreach: banktypes -->
-                                <label class="bank-types">
-                                    <img class="bank-types-img" data-bind="attr: {
-                                             'src': img,
-                                             'width': 30,
-                                             'height': 23 }"
-                                            />
-                                    <input class="bank-types-input" type="radio" data-bind="value: code, click: $parent.setSelectedBank" data-validate="{'validate-one-required-by-name':true}" name="bank"> <!-- ko text: name --><!--/ko-->
-                                </label>
-                            <!--/ko-->
-                        <!--/ko-->
-
-                        <!-- ko if: selectionType == '2' -->
-                            <select id="buckaroo_magento2_ideal_issuer" class="field"
-                                    data-bind="value: idealIssuer,
-                                    event: { change: setSelectedBankDropDown },
-                                    attr: { 'data-validate': JSON.stringify({ 'required-entry': true }) }"
-                                    name="bank">
-                                <option data-bind="i18n: 'Select a bank', 'value': ''"></option>
-                                <!-- ko foreach: banktypes -->
-                                    <option data-bind="i18n: name, 'value': code"></option>
-                                <!--/ko-->
-                            </select>
-                        <!--/ko-->
-
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!--/ko-->
-
         <div class="checkout-agreements-block">
             <!-- ko foreach: $parent.getRegion('before-place-order') -->
             <!-- ko template: getTemplate() --><!-- /ko -->
@@ -84,7 +45,7 @@
                         click: placeOrder,
                         attr: {title: $t('Place Order')},
                         enable: (getCode() == isChecked()),
-                        css: {disabled: !isPlaceOrderActionAllowed() || !buttoncheck() }
+                        css: {disabled: !isPlaceOrderActionAllowed() }
                         "
                         disabled>
                     <span data-bind="i18n: 'Place Order'"></span>
