--- a/view/frontend/web/css/ideal-fast-checkout.css
+++ b/view/frontend/web/css/ideal-fast-checkout.css
@@ -3,9 +3,11 @@
     padding: 0;
     border: none;
     background: none;
+    display: flex;
     align-items: center;
     justify-content: center;
     margin: 20px 0;
+    width: 100%;
 }
 
 #fast-checkout-ideal-btn img {
