--- a/view/frontend/web/template/payment/buckaroo_magento2_creditcards.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_creditcards.html
@@ -6,21 +6,23 @@
                        name="payment[method]"
                        class="radio"
                        data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"/>
-                <label class="label" data-bind="attr: {'for': getCode()}" >
-                        <!-- ko text: getTitle() --><!-- /ko -->
-                        <!-- ko if: buckaroo.subtext !== null && buckaroo.subtext.length > 0 -->
-                       <p class="bk-description" data-bind="text:buckaroo.subtext, style: getSubtextStyle()"></p>
-                        <!-- /ko -->
+                <label class="label" data-bind="attr: {'for': getCode()}">
+                    <!-- ko text: getTitle() --><!-- /ko -->
+                    <!-- ko if: buckaroo.subtext !== null && buckaroo.subtext.length > 0 -->
+                    <p class="bk-description" data-bind="text:buckaroo.subtext, style: getSubtextStyle()"></p>
+                    <!-- /ko -->
                 </label>
             </div>
             <div class="bk-mode-and-img">
                 <!-- ko if: buckaroo.isTestMode -->
-                <div class="bk-test-mode"><div class="bk-test-text" data-bind="i18n: 'Test Mode'"></div></div>
+                <div class="bk-test-mode">
+                    <div class="bk-test-text" data-bind="i18n: 'Test Mode'"></div>
+                </div>
                 <!-- /ko -->
                 <div class="bk-img-wrap">
                     <img
                         data-bind="attr: { src: buckaroo.logo }"
-                        alt="Creditcards Logo"
+                        alt="Credit Cards Logo"
                     />
                 </div>
             </div>
@@ -40,23 +42,26 @@
                 <fieldset class="fieldset bk-creditcards">
                     <legend class="hidden-fieldset-legend">Payment Details</legend>
                     <input id="buckaroo_magento2_creditcards_issuer"
-                    type="hidden"
-                    name="payment[buckaroo_magento2_creditcards][issuer]"
-                    data-bind="value: cardIssuer">
+                           type="hidden"
+                           name="payment[buckaroo_magento2_creditcards][issuer]"
+                           data-bind="value: cardIssuer">
                     <div class="fieldset">
                         <div class="field required">
-                            <label class="label" for="buckaroo_magento2_creditcards_cardholdername"> <span data-bind="i18n: 'Name on card:'"> </span> </label>
+                            <label class="label" for="buckaroo_magento2_creditcards_cardholdername"> <span
+                                data-bind="i18n: 'Name on card:'"> </span> </label>
                             <div class="control">
                                 <input id="buckaroo_magento2_creditcards_cardholdername"
                                        type="text"
                                        class="input-text field"
                                        name="payment[buckaroo_magento2_creditcards][cardholdername]"
                                        data-bind="
-                                       valueUpdate: 'blur',
-                                       value: cardHolderName,
-                                       attr: {'placeholder': 'John Doe'},
-                                       event: { blur: validateField }"
-                                       data-validate="{'required': true, 'validateCardHolderName': true}"/>
+                            valueUpdate: 'blur',
+                            value: cardHolderName,
+                            attr: {
+                                'data-validate': JSON.stringify({ 'required': true, 'validateCardHolderName': true }),
+                                'placeholder': 'John Doe'
+                             },
+                            event: { blur: validateField }">
                             </div>
                         </div>
 
@@ -64,32 +69,31 @@
                             <label class="label" for="buckaroo_magento2_creditcards_cardnumber">
                                 <span data-bind="i18n: 'Card number:'"> </span>
                             </label>
-                                <div class="bk-card-number-input-wrap">
-                                    <div class="control">
-                                        <input id="buckaroo_magento2_creditcards_cardnumber"
-                                               class="input-text field"
-                                               type="text"
-                                               name="payment[buckaroo_magento2_creditcards][cardnumber]"
-                                               data-bind="
-                                               valueUpdate: 'input',
-                                               value: formatedCardNumber,
-                                               attr: {
-                                                   'maxlength': 23,
-                                                   'placeholder': '0000 0000 0000 0000'
-                                               },
-                                               event: { blur: validateCardNumber }"
-                                               data-validate="{'required': true, 'validateCardHolderName': true}"/>
-                                    </div>
-                                    <div class="bk-card-image">
-                                        <img class="issuer-img"
-                                             data-bind="attr: {
+                            <div class="bk-card-number-input-wrap">
+                                <div class="control">
+                                    <input id="buckaroo_magento2_creditcards_cardnumber"
+                                           type="text"
+                                           class="input-text field"
+                                           name="payment[buckaroo_magento2_creditcards][cardnumber]"
+                                           data-bind="
+                                    valueUpdate: 'input',
+                                    value: formatedCardNumber,
+                                    attr: {
+                                        'data-validate': JSON.stringify({ 'required': true, 'validateCardNumber': true }),
+                                        'maxlength': 23,
+                                        'placeholder': '0000 0000 0000 0000'
+                                    },
+                                    event: { blur: validateCardNumber }">
+                                </div>
+                                <div class="bk-card-image">
+                                    <img class="issuer-img" data-bind="attr: {
                                                  'src': issuerImage,
                                                  'width': 30,
                                                  'height': 32 }"
-                                             alt="Credit Card Issuer Logo"
-                                        />
-                                    </div>
+                                         alt="Credit Card Issuer Logo"
+                                    />
                                 </div>
+                            </div>
                         </div>
                         <div class="bk-cvc-date-wrap">
                             <div class="field required bk-date">
@@ -102,14 +106,16 @@
                                            type="text"
                                            name="payment[buckaroo_magento2_creditcards][expireDate]"
                                            data-bind="
-                                           valueUpdate: 'input',
-                                           value: formatedExpirationDate,
-                                           attr: {
-                                               'maxlength': 5,
-                                               'placeholder': 'MM/YY'
-                                           },
-                                           event: { blur: validateField }"
-                                           data-validate="{'required':true,  'bkValidateMonth':true, 'bkValidateYear':true}">
+                                valueUpdate: 'input',
+                                value: formatedExpirationDate,
+                                attr: {
+                                    'data-validate': JSON.stringify(
+                                        { 'required': true,  'bkValidateMonth': true, 'bkValidateYear': true }
+                                    ),
+                                    'maxlength': 5,
+                                    'placeholder': 'MM/YY'
+                                },
+                                event: { blur: validateField }">
                                 </div>
                             </div>
                             <div class="field required bk-cvc">
@@ -122,21 +128,23 @@
                                            type="text"
                                            name="payment[buckaroo_magento2_creditcards][cvc]"
                                            data-bind="
-                                           valueUpdate: 'blur',
-                                           value: cvc,
-                                           attr: {
-                                               'maxlength': 4,
-                                               'placeholder': '123'
-                                           },
-                                           event: { blur: validateField }"
-                                           data-validate="{'required':true, 'validateCvc':true}">
+                                    valueUpdate: 'blur',
+                                    value: cvc,
+                                    attr: {
+                                        'data-validate': JSON.stringify({ 'required': true, 'validateCvc': true }),
+                                        'maxlength': 4,
+                                        'placeholder': '123'
+                                    },
+                                    event: { blur: validateField }">
                                 </div>
+
                             </div>
                         </div>
-                        </div>
+                    </div>
 
                     <div class="field">
-                        <span data-bind="i18n: 'Please make sure all fields are filled in correctly before proceeding.' ">  </span>
+                        <span
+                            data-bind="i18n: 'Please make sure all fields are filled in correctly before proceeding.' ">  </span>
                     </div>
                 </fieldset>
             </form>
