--- a/view/frontend/web/css/styles.css
+++ b/view/frontend/web/css/styles.css
@@ -114,6 +114,23 @@
 .checkout-agreements-block,
 .actions-toolbar{ clear:both; }
 
+.actions-toolbar.creditcards .primary .action.primary{
+    width: 100%;
+    line-height: 2.2rem;
+    padding: 14px 17px;
+    font-size: 1.8rem;
+}
+
+.actions-toolbar.creditcards .primary a {
+    color: #6b7280; /* Gray text */
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.actions-toolbar.creditcards .primary a:hover {
+    color: #374151; /* Darker gray on hover */
+}
+
 .payment-method-second-col {
     float:left; width: 100%; margin-bottom: 20px;
 }
