BP-4390-Error when placing order with Billink

--- a/view/frontend/web/template/payment/buckaroo_magento2_billink.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_billink.html
@@ -118,7 +118,7 @@
 
                     <!-- ko if: showB2B -->
                     <div class="field required">
-                        <legend class="label"> <span data-bind="i18n: 'Chamber of Commerce number:'"> </span> </legend>
+                        <legend class="label"> <span data-bind="i18n: 'COC Number:'"> </span> </legend>
                         <div class="control">
                             <input id="buckaroo_magento2_billink_chamberOfCommerce"
                                    class="input-text field"
