--- a/view/frontend/templates/checkout/cart/ideal-fast-checkout.phtml
+++ b/view/frontend/templates/checkout/cart/ideal-fast-checkout.phtml
@@ -24,7 +24,7 @@ if ($block->canShowButton('Cart')): ?>
 
     <div id="fast-checkout-ideal-btn-component" data-bind="scope: 'fastCheckoutIdeal'">
         <button id="fast-checkout-ideal-btn" type="button">
-            <img src="<?= $block->escapeHtml($block->getLogo()) ?>" alt="<?= __('Ideal Fast Checkout') ?>"/>
+            <img src="<?= $escaper->escapeHtml($block->getLogo()) ?>" alt="<?= __('Ideal Fast Checkout') ?>"/>
         </button>
     </div>
 
